Index correction. Corrected wording.

--- a/app/views/Unsubscribe/farewell.html
+++ b/app/views/Unsubscribe/farewell.html
@@ -2,17 +2,14 @@
 #{set title:'Farewell!' /}
 
 <div id="body">
-	<h3>Subscription Canceled</h3>
+	<h3>Unsubscribed</h3>
 	<hr/>
 	<p>
-		Your account has been successfully canceled.
+		You are unsubscribed from any more HN Notify notification emails.
 	</p>
 	<p>
-		I would appreciate any time you would take to send me feedback on your
-		experience with HN Notify.
-	</p>
-	<p>
-		Please send any and all feedback to  
+		If you had any recommendations or feedback on the service, I would
+		love to hear them. Please send them to  
 		<a href="mailto:hnnotify@thebuzzmedia.com">hnnotify@thebuzzmedia.com</a> or
 		directly at <a href="mailto:riyad@thebuzzmedia.com">riyad@thebuzzmedia.com</a>
 		if you prefer.
