Added support for registering multiple times to watch comments by multiple usernames as well as unsubscribing using that same technique.

--- a/app/views/ReplyMailer/notify.html
+++ b/app/views/ReplyMailer/notify.html
@@ -18,7 +18,7 @@
 				</tbody>
 			</table>
 			<div id="footer" style="color: #888888;	font-size: 8pt;	margin-top: 1em; margin-left: auto;	margin-right: auto;">
-				<a href="http://hnnotify.com" style="color: #000000;">HN Notify</a> &copy; 2011 The Buzz Media | Click to <a href="http://hnnotify.com/unsubscribe?email=${user.email}" style="color: #000000;">Unsubscribe</a> 
+				<a href="http://hnnotify.com" style="color: #000000;">HN Notify</a> &copy; 2011 The Buzz Media | Click to <a href="http://hnnotify.com/unsubscribe" style="color: #000000;">Unsubscribe</a> 
 			</div>
 		</center>
 	</body>
