--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,7 @@
         <title>HN Notify | #{get 'title' /}</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" media="screen" href="@{'/public/css/main.css'}">
-        <link rel="shortcut icon" type="image/png" href="@{'/public/img/favicon.png'}">
+        <link rel="shortcut icon" type="image/png" href="@{'/public/img/favicon.ico'}">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js" type="text/javascript"></script>
         #{get 'extScripts' /}
     </head>
