--- a/app/views/Application/privacy.html
+++ b/app/views/Application/privacy.html
@@ -5,22 +5,27 @@
 	<h3>Privacy Statement</h3>
 	<hr/>
 	<p>
-		HN Notify is a free service I am providing to the Hacker News community.
+		HN Notify is a free service I am providing to the 
+		<a href="http://news.ycombinator.com">Hacker News community</a>.
 	</p>
 	<p>
 		HN is one of the few online communities I really enjoy participating in
-		and <em>reply-notification</em> is something I have wanted to have for
-		HN for years now.
+		and <em>comment reply-notification</em> is something I have wanted to 
+		have for HN for years now.
 	</p>
 	<p>
-		Your email address and HN username are stored in a local DB and used by
-		the service to determine who gets notifications of new messages.
+		Your email address and HN username are stored in a database and used as
+		a trigger for email notifications when the comment indexer finds a match.
+		Unsubscribing from HN Notify simply removes that trigger from the database
+		(your information is erased) and no further notifications are sent.
 	</p>
 	<p>
-		That is it.
+		There is no complex statistics calculated or collected and the site has
+		no memory of you when you unsubscribe. Just a simple/clean trigger-based
+		implementation meant to be a convenience for HN readers.
 	</p>
 	<p>
-		I will not sell your email address or share it with any outside source.
+		I will not sell or share the email list with anyone.
 	</p>
 	<p>
 		If you have any questions or feedback, you can reach me at 
