--- a/app/views/main.html
+++ b/app/views/main.html
@@ -18,7 +18,7 @@
     						<img src="http://ycombinator.com/images/y18.gif" width="18" height="18" style="border:1px #ffffff solid;">
     					</td>
     					<td class="title">#{a @Application.index()}HN Notify#{/a}</td>
-    					<td class="subtitle">Email Reply Notifications for HN</td>
+    					<td class="subtitle">Email Reply Notifications for Hacker News</td>
     				</tr>
     			</thead>
     			<tbody>
